--- a/.github/workflows/profile-3d.yml
+++ b/.github/workflows/profile-3d.yml
@@ -13,8 +13,8 @@ jobs:
       - uses: actions/checkout@v3
       - uses: yoshi389111/github-profile-3d-contrib@0.7.1
         env:
-          GITHUB_TOKEN: ${{ secrets.MY_PAT_TOKEN }}
-          USERNAME: alvserika
+          GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}
+          USERNAME: ${{ github.alvserika }}
       - name: Commit & Push
         run: |
           git config user.name github-actions
